<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_dashboard" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/menu_camera" />

    <item
        android:id="@+id/navigation_errors"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/menu_errors" />

    <item
        android:id="@+id/navigation_analytics"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/menu_analytics" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/menu_profile" />

</menu>